# hammer-surf-tools

./: .gitignore  CMakeLists.txt  README.md  toolchain-mingw64.cmake
.github/workflows/: build.yml
src/: anglefix.c  brushsync.c  common.c  common.h  config.h  contextmenu.c  contextmenu.h  dll.c  hammerfuncs.c  hammerfuncs.h  hooks.c  hooks.h  hotkeys.c  hotkeys.h  measure.c  measure.h  offsets.c  offsets.h  patterns.c  patterns.h  pch.h  rampgen.c  rampgen.h  rampgen.rc  scriptfuncs.c  test-patterns.c  triggergen.c  triggergen.h  util.c  util.h  wndproc.h  wrapper.c  wrapper.h
